@startuml
hide circle

' Color Customization
skinparam {
    BackgroundColor white
    ArrowColor #4C5FD5
    
    ' Class Diagram specific
    ClassBackgroundColor white
    ClassBorderColor #4C5FD5
    ClassHeaderBackgroundColor #5AC8FA
    ClassAttributeFontColor black
    ClassStereotypeFontColor black
    
    ' Notes
    NoteBackgroundColor #FBBF24
    NoteBorderColor #FBBF24
}

skinparam classAttributeIconSize 0

class "chat" {
  +id : Integer
  +course : Integer
  +name : String
  +intro : String
  +introformat : Integer
  +keepdays : Integer
  +studentlogs : Integer
  +chattime : Integer
  +schedule : Integer
  +timemodified : Integer
  __
  +create()
  +update()
  +delete()
}

class "chat_messages" {
  +id : Integer
  +chatid : Integer
  +userid : Integer
  +groupid : Integer
  +issystem : Integer
  +message : String
  +timestamp : Integer
  __
  +create()
  +update()
  +delete()
}

class "chat_messages_current" {
  +id : Integer
  +chatid : Integer
  +userid : Integer
  +groupid : Integer
  +issystem : Integer
  +message : String
  +timestamp : Integer
  __
  +create()
  +update()
  +delete()
}

class "chat_users" {
  +id : Integer
  +chatid : Integer
  +userid : Integer
  +groupid : Integer
  +version : String
  +ip : String
  +firstping : Integer
  +lastping : Integer
  +lastmessageping : Integer
  +sid : String
  +course : Integer
  +lang : String
  __
  +create()
  +update()
  +delete()
}

class "course" <<External>> {
}

"chat_messages" "*" --> "1" "chat" : chatid
"chat_messages_current" "*" --> "1" "chat" : chatid
"chat_users" "*" --> "1" "chat" : chatid
"chat_users" "*" --> "1" "course" : course
@enduml
